Log entry: JavaFX module split + docs sync (combined commit)